k8s/apps/ersatztv/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ersatztv
  name: ersatztv-http-lb
  namespace: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: etv.herrington.services
spec:
  externalTrafficPolicy: Local
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: ersatztv-http
      port: 80
      protocol: TCP
      targetPort: 8409
  selector:
    app: ersatztv
  sessionAffinity: None
  type: LoadBalancer
