k8s/apps/ersatztv/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ersatztv-http
  labels:
    app: ersatztv
spec:
  ports:
    - name: ersatztv-http
      port: 80
      targetPort: 8409
  selector:
    app: ersatztv
